remove max-width to prevent negative overflow

--- a/styles/Map.module.scss
+++ b/styles/Map.module.scss
@@ -4,7 +4,8 @@ main.container{
 
 .menu-container{
     min-width: 300px;
-    max-width: 300px;
+    // max-width: 300px;
+    width: 20vw;
     height: 100vh;
     background-color: rgb(39, 39, 39);
     border-right: 2px solid #111;
